--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 server.port=8081
+
+#DataSource Configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://110.74.194.125:5432/Test
+spring.datasource.username=test
+spring.datasource.password=test
